<resources>
    <string name="app_name">Deliverinator</string>
    <string name="login_button">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="register_button">Register</string>
    <string name="register_full_name">Full Name</string>
    <string name="register_phone">Phone</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="login_register_here">Don\'t have an account? Register here</string>
    <string name="dashboard_logout">Logout</string>
    <string name="login_incorrect">Incorrect email and/or password</string>
    <string name="login_logged_in">Logged In!</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="invalid_password">Invalid Password!</string>
    <string name="register_invalid_password">Password must be 8 characters long and contain at least one number and one uppercase</string>
    <string name="register_invalid_confirm_password">Passwords must match</string>
    <string name="empty_field">Field cannot be empty</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="registration_completed">Registration Completed</string>
    <string name="user_registered">User already registered!</string>
    <string name="already_registered">Already registered? Login here</string>
    <string name="register_as_client">Register as Client</string>
    <string name="register_as_restaurant">Register as Restaurant</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_link_sent">Reset Link Sent!</string>
    <string name="link_not_sent">Link couldn\'t be sent</string>
    <string name="send">Send</string>
    <string name="verification_mail_sent">Verification Mail Sent</string>
    <string name="email_not_verified">Email not verified!</string>
    <string name="verify_now">Verify now</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="restaurant_menu_menu">Menu</string>
    <string name="restaurant_menu_orders">Orders</string>
    <string name="login_provide">Please provide username and password</string>
    <string name="client_menu_account">Account</string>
    <string name="client_menu_restaurant">Restaurants</string>
    <string name="client_menu_cart">Cart</string>
    <string name="restaurant_menu_account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change password</string>
    <string name="apply_changes">Apply changes</string>
    <string name="updated_account">Information has been updated</string>
    <string name="no_changes">No changes to be made</string>
    <string name="permission_denied">Permission denied</string>
    <string name="add_a_restaurant">Add a restaurant</string>
    <string name="delete_a_restaurant">Delete a restaurant</string>
    <string name="description">Description</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="wrong_user_type">Wrong User Type</string>
    <string name="add_description">Add description</string>
    <string name="user_deleted">User account has been deleted</string>
    <string name="user_deleted_error">User account couldn\'t be deleted</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="add_item">Add an item</string>
    <string name="choose_image">Choose Image</string>
    <string name="delete_account">Delete Account</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="edit">Edit</string>
    <string name="update_item">Update item</string>
    <string name="update">Update</string>
    <string name="leave_restaurant">Are you sure you want to leave the restaurant?</string>
    <string name="item_price">Item price</string>
    <string name="finish_order">Finish Order</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_adress">Please confirm your address</string>
    <string name="provide_adress">Please provide an address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="is_the_order_done">Is the order done?</string>
    <string name="empty_cart">Your shopping cart is empty</string>
    <string name="order_sent">Order sent!</string>
    <string name="new_orders_received">New Orders Received</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>