<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AddFragment">

    <EditText
        android:id="@+id/admin_add_name"
        style="@style/login_editText"
        android:hint="@string/restaurant_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/admin_add_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_app_name" />

    <TextView
        android:id="@+id/admin_add_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_a_restaurant"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/admin_add_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/admin_add_email"
        style="@style/login_editText"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/admin_add_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_name" />

    <EditText
        android:id="@+id/admin_add_phone"
        style="@style/login_editText"
        android:hint="@string/register_phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/admin_add_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_email" />

    <EditText
        android:id="@+id/admin_add_password"
        style="@style/login_editText"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/admin_add_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_phone" />

    <EditText
        android:id="@+id/admin_add_confirm_password"
        style="@style/login_editText"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/admin_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_password" />

    <Button
        android:id="@+id/admin_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        app:layout_constraintBottom_toTopOf="@id/admin_progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_confirm_password" />

    <ProgressBar
        android:id="@+id/admin_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
