<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".client.AccountFragment">

        <TextView
            android:id="@+id/account_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/full_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/account_edit_email" />

        <EditText
            android:id="@+id/account_edit_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/account_full_name" />

        <TextView
            android:id="@+id/account_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/email"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/account_email" />

        <TextView
            android:id="@+id/account_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/account_edit_full_name" />

        <EditText
            android:id="@+id/account_edit_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/account_address" />

        <TextView
            android:id="@+id/account_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/phone"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/account_edit_address" />

        <EditText
            android:id="@+id/account_edit_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/account_phone" />

        <Button
            android:id="@+id/account_apply_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/apply_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_edit_phone" />

        <TextView
            android:id="@+id/account_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_apply_changes" />

        <TextView
            android:id="@+id/account_delete_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Delete Account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_change_password" />

        <ProgressBar
            android:id="@+id/account_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_delete_account_textView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>